<resources>
    <string name="app_name">WhatsApp</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="linked_devices">Linked devices</string>
    <string name="starred_messages">Starred messages</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="viewpager">View Pager</string>
    <string name="tab_view">Tab View</string>
    <string name="status_privacy">Status privacy</string>
    <string name="clear_call_log">Clear call log</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_to">Welcome to WhatsApps</string>
    <string name="agree_and_continue">AGREE AND CONTINUE</string>
    <string name="policy">Read our <a href="#">Privacy Policy</a>. Tap "Agree and continue" to accept the <a href="#">Terms of Service</a>.</string>
    <string name="whatsApp_number">whatsApp will need to verify your phone number </string>
    <string name="india">India</string>
    <string name="enter_otp_here">Enter otp here</string>
    <string name="logout">Logout</string>
    <string name="send_otp">Send Otp</string>

    <string name="_91">91</string>
    <string name="country_code">code</string>
    <string name="new_contact">New Contact</string>
    <string name="contacts_on_whatsapp">Contacts on WhatsApp</string>
    <string name="invite_to_whatsapp">invite to WhatsApp</string>
    <string name="invite">INVITE</string>
    <string name="bhagchandjat">Bhagchandjat</string>
    <string name="scan_code">scan_code</string>
    <string name="account">Account</string>
    <string name="privacy_security_change_number">Privacy, Security, change number</string>
    <string name="chat">Chats</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="help">Help</string>
    <string name="storage_and_data">Storage and data</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme, wallpapers, chat history</string>
    <string name="message">Message, group &amp; call tones</string>
    <string name="network">Network usage, auto-download</string>
    <string name="help_center">Help center, contact us, privacy policy</string>
</resources>