<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/new_group"
        android:title="@string/new_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/new_broadcast"
        android:title="@string/new_broadcast"
        app:showAsAction="never"/>
    <item
        android:id="@+id/linked_devices"
        android:title="@string/linked_devices"
        app:showAsAction="never"/>
    <item
        android:id="@+id/starred_messages"
        android:title="@string/starred_messages"
        app:showAsAction="never"/>
    <item
        android:id="@+id/payment"
        android:title="@string/payments"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>